# Visual-LiDAR-fusion_EKF-odometry

./: .gitignore  CMakeLists.txt  README.md  build.sh  download_dataset.sh  run.py  test.py
include/: stereo_VO.h
lidar/dataset/: KITTI.py  __init__.py
lidar/utils/: __init__.py  bin2pcd.py  get_pcd.py  transformation.py
script/: icp_transformation copy 2.py  icp_transformation copy.py  visualize_lidar.py  wow.py
src/: icp_transformation.py  stereo_VO.cpp  visualize_lidar.py  visualize_lidar_copy.py
